[package]
name = "opl-driver"
version = "0.1.0"
authors = ["Dion Dokter <diondokter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device-driver = { path = "../device-driver" }
embedded-hal = "0.2.4"
num_enum = "0.5.1"
